# chessehc

./: .gitignore  README.md
.github/workflows/: codeql.yml  rust.yml
client/: .gitignore  makefile
client/font/: buildFont.groovy  fontblob.c
client/font/raw/: 033.txt  034.txt  035.txt  036.txt  037.txt  038.txt  039.txt  040.txt  041.txt  042.txt  043.txt  044.txt  045.txt  046.txt  047.txt  048.txt  049.txt  050.txt  051.txt  052.txt  053.txt  054.txt  055.txt  056.txt  057.txt  058.txt  059.txt  060.txt  061.txt  062.txt  063.txt  064.txt  065.txt  066.txt  067.txt  068.txt  069.txt  070.txt  071.txt  072.txt  (+56 more)
client/src/: chess.c  chess.h  content.c  content.h  font.c  font.h  fontblob.h  game.c  game.h  graphics.c  graphics.h  gui.c  gui.h  input.c  input.h  main.c  main.h  net.c  net.h  persistent.c  persistent.h  style.h  util.c  util.h
database/: setup.sql
protocol_specification/: authentication.md  game.md  protocol.md  request.md  response.md
server/: .env.template  Cargo.toml  LICENSE_APACHE  LICENSE_MIT  README.md  sqlx-data.json
server/.cargo/: config.toml
server/lib/: board.rs  coordinate.rs  delta.rs  error.rs  game.rs  lib.rs  logic.rs  move.rs  piece_set.rs  spot.rs
server/lib/board/: mod.rs  spot.rs
server/lib/piece/: bishop.rs  king.rs  knight.rs  mod.rs  pawn.rs  pieces.rs  queen.rs  rook.rs
server/lib/standard_pieces/: bishop.rs  king.rs  knight.rs  mod.rs  pawn.rs  queen.rs  rook.rs
server/src/: config.rs  main.rs
server/src/db/: account.rs  mod.rs
server/src/game/: code.rs  mod.rs
server/src/request/: game.rs  mod.rs
server/src/request/acc/: mod.rs
server/src/request/game/: mod.rs
server/src/request/ig/: mod.rs
server/src/request/pub/: log_in.rs  mod.rs
server/src/request/pub/profile/: account.rs  mod.rs
server/src/response/: mod.rs
server/src/response/err/: mod.rs
server/src/response/err/in_game/: mod.rs
server/src/response/err/inval_req/: mod.rs
server/src/response/err/inval_req/auth/: challenge.rs  id.rs  mod.rs
server/src/response/err/inval_req/game/: mod.rs
server/src/response/err/inval_req/perms/: mod.rs
server/src/response/err/mal_req/: mod.rs
server/src/response/err/mal_req/mal_bin/: mod.rs
server/src/response/ok/: mod.rs
server/src/response/ok/in_game/: board.rs  game.rs  mod.rs
server/src/response/ok/in_game/game/: mod.rs  players.rs  status.rs
server/src/response/ok/public/: mod.rs
server/src/response/ok/public/profile/: account.rs  mod.rs
server/src/server/: handler.rs  mod.rs
server/src/server/request/: mod.rs
server/src/server/request/acc/: mod.rs
server/src/server/request/game/: mod.rs
server/src/server/request/ig/: mod.rs
server/src/server/request/pub/: mod.rs
server/src/server/request/pub/log_in/: mod.rs
server/src/server/response/: mod.rs
server/src/server/response/err/: mod.rs
server/src/server/response/err/in_game/: mod.rs
server/src/server/response/err/inval_req/: mod.rs
server/src/server/response/err/inval_req/auth/: challenge.rs  id.rs  mod.rs
server/src/server/response/err/inval_req/auth/log_in/: mod.rs
server/src/server/response/err/inval_req/auth/uname_use/: mod.rs
server/src/server/response/err/inval_req/game/: mod.rs
server/src/server/response/err/inval_req/perms/: mod.rs
server/src/server/response/err/mal_req/: mod.rs
server/src/server/response/err/mal_req/mal_bin/: mod.rs
server/src/server/response/ok/: mod.rs
