[package]
name = "chessehc_server"
version = "0.2.3"
authors = ["Tom Boddaert (tomBoddaert) <chessehc@tomboddaert.com>", "BigPharmaceutical"]
edition = "2021"
description = "A variation of Chess on the surface of a tube; server and library"
readme = "../README.md"
homepage = "https://github.com/BigPharmaceutical/chessehc/"
repository = "https://github.com/BigPharmaceutical/chessehc/"
license = "MIT OR Apache-2.0"

[dependencies]
base64 = { version = "0.21.0", optional = true }
futures-util = { version = "0.3.26", optional = true }
tokio = { version = "1.26.0", features = [ "full" ], optional = true }
tokio-tungstenite = { version = "0.18.0", optional = true }

[lib]
name = "chessehc"
path = "lib/lib.rs"
doc = true
edition = "2021"
crate-type = [ "lib" ]

[features]
default = [ "standard_pieces" ]
standard_pieces = []
server = [ "base64", "futures-util", "tokio", "tokio-tungstenite" ]

[[bin]]
name = "chessehc_server"
path = "src/main.rs"
required-features = [ "server" ]
