[package]
name = "chessehc"
version = "0.2.11"
authors = ["Tom Boddaert (tomBoddaert) <chessehc@tomboddaert.com>", "BigPharmaceutical"]
edition = "2021"
description = "A variation of Chess on the surface of a tube; server and library"
readme = "../README.md"
homepage = "https://github.com/BigPharmaceutical/chessehc/"
repository = "https://github.com/BigPharmaceutical/chessehc/"
license = "MIT OR Apache-2.0"

[dependencies]
base64 = { version = "0.21.0", optional = true }
futures-util = { version = "0.3.26", optional = true }
tokio = { version = "1.26.0", features = ["full"], optional = true }
tokio-tungstenite = { version = "0.18.0", optional = true }
ed25519-dalek = { version = "2.0.0-rc.2", optional = true }
lazy_static = { version = "1.4.0", optional = true }
regex = { version = "1.7.3", optional = true }
sqlx = { version = "0.6.3", optional = true, features = ["postgres", "runtime-tokio-native-tls", "offline"] }
dotenvy = { version = "0.15.7", optional = true }
rand = { version = "0.8.5", optional = true }
nohash-hasher = { version = "0.2.0", optional = true }

[lib]
name = "chessehc"
path = "lib/lib.rs"
doc = true
edition = "2021"
crate-type = ["lib"]

[features]
default = ["standard_pieces"]
standard_pieces = []
standard_pieces_send = ["standard_pieces"]
server = ["standard_pieces_send", "base64", "futures-util", "tokio", "tokio-tungstenite", "ed25519-dalek", "lazy_static", "regex", "sqlx", "dotenvy", "rand", "nohash-hasher"]

[[bin]]
name = "chessehc_server"
path = "src/main.rs"
required-features = ["server"]
